Corrected Issue posts actions vertical alignment

--- a/trunk/admin/css/periodicalpress-admin.css
+++ b/trunk/admin/css/periodicalpress-admin.css
@@ -938,6 +938,7 @@ table.links-table {
 .issue-post-row-actions a {
 	display: inline-block;
 	padding: 0.5em 0;
+	height: 20px;
 	text-decoration: none;
 	cursor: pointer;
 }
@@ -958,6 +959,7 @@ table.links-table {
 }
 .issue-post-order-label {
 	display: inline-block;
+	height: 20px;
 	padding: 0.5em 0;
 }
 
